# SwiftBoot

./: CMakeLists.txt  README.md
include/: SwiftBoot.hpp  SwiftBootElf.hpp  SwiftBootFS.hpp  SwiftBootGraphics.hpp  SwiftBootJson.hpp  SwiftBootUtils.hpp
src/: Elf.cpp  FS.cpp  Graphics.cpp  Json.cpp  Main.cpp  Utils.cpp
test/: config.json
